hphp/hack/test/typecheck/ffp/tuple_hints_broken.php.exp
ERROR: File "tuple_hints_broken.php", line 3, characters 26-26:
An opening angle bracket `<` is expected here. (Parsing[1002])
ERROR: File "tuple_hints_broken.php", line 3, characters 21-25:
Unbound name: `tuple` (Naming[2049])
ERROR: File "tuple_hints_broken.php", line 3, characters 21-25:
Did you want a *tuple*? Try `(X,Y)`, not `tuple<X,Y>` (Typing[4100])
